Bug 323053 - commit 913219a357252bfaee15d0df88918d2c6e3a12cf broke live preview if "synchronize preview position..." action is enabled
Summary: commit 913219a357252bfaee15d0df88918d2c6e3a12cf broke live preview if "synchr...
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: general (other bugs)
Version First Reported In: trunk-kde4
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
: 322527 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-07-31 16:30 UTC by Eugene Shalygin
Modified: 2013-09-01 20:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Illustration and possible fix (623 bytes, patch)
2013-07-31 16:31 UTC, Eugene Shalygin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eugene Shalygin 2013-07-31 16:30:39 UTC
When "synchronize preview position..." action is enabled, document viewer is not updated after recompilation. 

According to note for LivePreviewManager::ensureDocumentIsOpenInViewer(), it seems to me that hadToOpen and m_synchronizeViewWithCursorAction->isChecked() conditions have to be checked independently in LivePreviewManager::updatePreviewInformationAfterCompilationFinished()

Reproducible: Always
Comment 1 Eugene Shalygin 2013-07-31 16:31:34 UTC
Created attachment 81485 [details]
Illustration and possible fix

Thes changes fix the problem for me
Comment 2 Michel Ludwig 2013-09-01 18:53:47 UTC
Git commit a212fe70364e2e59af911a8619b7c272d1ce8876 by Michel Ludwig.
Committed on 01/09/2013 at 18:51.
Pushed by mludwig into branch 'master'.

Fix the reloading of the document after live preview compilations

Thanks to Eugene Shalygin for suggesting the fix!

M  +8    -6    src/livepreview.cpp

http://commits.kde.org/kile/a212fe70364e2e59af911a8619b7c272d1ce8876
Comment 3 Michel Ludwig 2013-09-01 20:39:35 UTC
*** Bug 322527 has been marked as a duplicate of this bug. ***