Fix the reloading of the document after live preview compilations

Thanks to Eugene Shalygin for suggesting the fix!

BUG: 323053